@@ -1,3 +1,8 @@
+2008-05-29 Fixed two bugs in texmanager.py:
+               improved comparison of dvipng versions
+               fixed a bug introduced when get_grey method was added
+           - DSD
+
 2008-05-29 Implement path clipping in SVG backend - MGD
 
 2008-05-28 Fix crashing of PDFs in xpdf and ghostscript when two-byte
